--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-django
-django-crispy-forms
-django-sekizai
-djangorestframework
-markdown
-django-filter
-django-cors-headers
+Django==4.1.7
+Django==4.2.1
+django_ckeditor==6.5.1
